--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "build": "npm run build"
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
